--- a/index.html
+++ b/index.html
@@ -487,17 +487,19 @@
       </div>
     </div>
 
-    <!-- Offcanvas for all  -->
+
+    <!-- Offcanvase for faq  -->
     <div class="offcanvas offcanvas-end drawer_boost" tabindex="-1" id="offcanvasRight">
-      <button class="close_drawer">
+      <button class="close_drawer" data-bs-dismiss="offcanvas" aria-label="Close">
         <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
           <path fill="currentColor" d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"></path>
         </svg>
       </button>
       <div class="offcanvas-body">
-        <div id="drawerimpot"></div>
+        <div id="appendRightsidebar"></div>
       </div>
     </div>
+
 
 
     <!-- Reeem modal -->
@@ -672,10 +674,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-    <!-- <script src="./js/app.js"></script> -->
 
     <script>
-      $("#drawerimpot").load("./drawer.html");
+      $("#appendRightsidebar").load("./drawer.html");
+      $("#faqImport").load("./faq.html");
+
       const tr = `<tr>
             <td>
                 <Box class='assets'>
