Fix issue offcanvas backdrop

--- a/drawer.html
+++ b/drawer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" href="./css/app/app.css">
+    <!-- <link rel="stylesheet" href="./css/app/app.css"> -->
   </head>
 
   <body>
@@ -592,6 +592,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script> -->
 
     <script>
       $("#faqsBox").load("./faq.html");
