--- a/faq.html
+++ b/faq.html
@@ -2,14 +2,7 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earn</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" />
-    <link rel="stylesheet" href="./css/app/app.css">
-    <link rel="stylesheet" href="./css/faq/faq.css">
+    <!-- <link rel="stylesheet" href="./css/app/app.css"> -->
   </head>
 
   <body>
@@ -32,11 +25,8 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-
     <script>
-      const faqs = [
+      const faq = [
         {
           question: 'How do I deposit with crypto?',
           answer: 'Nulla facilisi. Phasellus sollicitudin nulla et quam mattis feugiat. Aliquam eget maximus est, id dignissim quam.'
@@ -63,18 +53,18 @@
         },
       ]
 
-      for (let i = 1; i < faqs.length; i++) {
+      for (let i = 1; i < faq.length; i++) {
         const accordionBlock = `
               <div class="accordion-item">
                 <h2 class="accordion-header" id="heading${i}">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse${i}" aria-expanded="true" aria-controls="collapse${i}">
                     <span class="faq_count">${i + 1}</span>
-                    ${faqs[i].question}
+                    ${faq[i].question}
                   </button>
                 </h2>
                 <div id="collapse${i}" class="accordion-collapse collapse" aria-labelledby="heading${i}" data-bs-parent="#appendAccordion">
                   <div class="accordion-body">
-                    <p>${faqs[i].answer}</p>
+                    <p>${faq[i].answer}</p>
                   </div>
                 </div>
               </div>
