Fix Error & Complete project One task pedning profile stepper

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <body>
     <div class="d-flex align-items-start">
-      <div class="sidebar_menu">
+      <div class="sidebar_menu open">
         <!-- Sidebar top section -->
-        <a href="./index.html" class="logo" id="logo">
-          <img src="./images/logo.png" alt="Logo" />
+        <a href="./index.html" class="logo_big" id="logo">
+          <img src="./images/logo-big.jpeg" alt="Logo" />
         </a>
 
         <!-- Sidebar grid content -->
@@ -24,7 +24,7 @@
           <!-- Sidebar menu list -->
           <ul class="menu">
             <li class="menu_item">
-              <a href="./index.html">
+              <a href="./index.html" class="active">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 8.27V4.23C22 2.64 21.36 2 19.77 2H15.73C14.14 2 13.5 2.64 13.5 4.23V8.27C13.5 9.86 14.14 10.5 15.73 10.5H19.77C21.36 10.5 22 9.86 22 8.27Z" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
                   <path d="M10.5 8.52V3.98C10.5 2.57 9.86 2 8.27 2H4.23C2.64 2 2 2.57 2 3.98V8.51C2 9.93 2.64 10.49 4.23 10.49H8.27C9.86 10.5 10.5 9.93 10.5 8.52Z" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
@@ -136,8 +136,9 @@
                           <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="notify_avtar" />
                           <span class="notify">Salma sent you new message Assign her new tasks</span>
                           <button class="remove_notify">
-                            <svg focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
-                              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                           </button>
                         </li>
@@ -386,7 +387,7 @@
             <div class="col-lg-6">
               <div class="assets_title">Assets</div>
               <div class="tableResponsive">
-                <table class="table">
+                <table class="table" id="myTable">
                   <thead>
                     <tr>
                       <th>Asset</th>
@@ -399,12 +400,15 @@
                   <tbody id="appendData"></tbody>
                 </table>
               </div>
+
+              <ul class="pagination" id="pagination"></ul>
+
             </div>
 
             <div class="col-lg-6">
               <div class="assets_title">Transactions</div>
               <div class="tableResponsive">
-                <table class="table">
+                <table class="table" id="myTable">
                   <thead>
                     <tr>
                       <th>Asset</th>
@@ -425,7 +429,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <div class="owl_card_slider">
                 <div class="owl-carousel owl-theme card_owl" id="appendCard"></div>
               </div>
@@ -619,11 +623,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-
+    <script src="./js/app.js"></script>
     <script>
-      $("#appendRightsidebar").load("./drawer.html");
+      $(document).ready(function () {
+        $("#appendRightsidebar").load("./drawer.html");
 
-      const tr = `<tr>
+        const tr = `<tr>
             <td>
                 <Box class='assets'>
                     <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
@@ -670,12 +675,12 @@
             </td>
         </tr>`;
 
-      for (let i = 0; i < 21; i++) {
-        $("#appendData").append(tr);
-      }
+        for (let i = 0; i < 21; i++) {
+          $("#appendData").append(tr);
+        }
 
 
-      const card = `<div class="item">
+        const card = `<div class="item">
             <div class="slider_card">
                 <div class="card_symbol">
                     <img src="./images/avax.svg"
@@ -692,35 +697,36 @@
                     Now</button>
             </div>
         </div>`;
-      for (let i = 0; i < 21; i++) {
-        $("#appendCard").append(card);
-      }
+        for (let i = 0; i < 8; i++) {
+          $("#appendCard").append(card);
+        }
 
-      $(".card_owl").owlCarousel({
-        loop: true,
-        margin: 10,
-        nav: true,
-        margin: 20,
-        responsive: {
-          375: {
-            items: 1.6,
+        $("#appendCard").owlCarousel({
+          items: 3.5,
+          loop: true,
+          margin: 10,
+          nav: true,
+          responsive: {
+            375: {
+              items: 3,
+            },
+            576: {
+              items: 2.5,
+            },
+            991: {
+              items: 3,
+            },
+            1200: {
+              items: 2,
+            },
+            1400: {
+              items: 2,
+            },
+            1600: {
+              items: 3,
+            },
           },
-          576: {
-            items: 2.5,
-          },
-          991: {
-            items: 4,
-          },
-          1200: {
-            items: 2,
-          },
-          1400: {
-            items: 2,
-          },
-          1600: {
-            items: 3,
-          },
-        },
+        });
       });
     </script>
   </body>
