--- a/earninner.html
+++ b/earninner.html
@@ -13,10 +13,10 @@
 
   <body>
     <div class="d-flex align-items-start">
-      <div class="sidebar_menu">
+      <div class="sidebar_menu open">
         <!-- Sidebar top section -->
-        <a href="./index.html" class="logo" id="logo">
-          <img src="./images/logo.png" alt="Logo" />
+        <a href="./index.html" class="logo_big" id="logo">
+          <img src="./images/logo-big.jpeg" alt="Logo" />
         </a>
 
         <!-- Sidebar grid content -->
@@ -49,7 +49,7 @@
             </li>
 
             <li class="menu_item">
-              <a href="./earn.html">
+              <a href="./earn.html" class="active">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M2 2V19C2 20.66 3.34 22 5 22H22" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
                   <path opacity="0.4" d="M5 17L9.59 11.64C10.35 10.76 11.7 10.7 12.52 11.53L13.47 12.48C14.29 13.3 15.64 13.25 16.4 12.37L21 7" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
@@ -136,8 +136,9 @@
                           <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="notify_avtar" />
                           <span class="notify">Salma sent you new message Assign her new tasks</span>
                           <button class="remove_notify">
-                            <svg focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
-                              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                           </button>
                         </li>
@@ -371,7 +372,7 @@
             <div class="assets_title">Active Stakes</div>
             <div class="col-12">
               <div class="tableResponsive">
-                <table class="table">
+                <table class="table" id="myTable">
                   <thead>
                     <tr>
                       <th>Start Date</th>
@@ -410,6 +411,8 @@
                   </tbody>
                 </table>
               </div>
+              <ul class="pagination" id="pagination"></ul>
+
             </div>
           </div>
 
@@ -418,7 +421,7 @@
             <div class="assets_title">Completed Stakes</div>
             <div class="col-12">
               <div class="tableResponsive">
-                <table class="table">
+                <table class="table" id="myTable">
                   <thead>
                     <tr>
                       <th>Start Date</th>
@@ -457,6 +460,7 @@
                   </tbody>
                 </table>
               </div>
+              <ul class="pagination" id="pagination"></ul>
             </div>
           </div>
 
@@ -495,6 +499,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+    <script src="./js/app.js"></script>
 
     <script>
       $("#appendRightsidebar").load("./drawer.html");
