--- a/profile.html
+++ b/profile.html
@@ -13,10 +13,10 @@
 
   <body>
     <div class="d-flex align-items-start">
-      <div class="sidebar_menu">
+      <div class="sidebar_menu open">
         <!-- Sidebar top section -->
-        <a href="./index.html" class="logo" id="logo">
-          <img src="./images/logo.png" alt="Logo" />
+        <a href="./index.html" class="logo_big" id="logo">
+          <img src="./images/logo-big.jpeg" alt="Logo" />
         </a>
 
         <!-- Sidebar grid content -->
@@ -592,6 +592,8 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+      <script src="./js/app.js"></script>
+
       <script>
         $("#appendRightsidebar").load("./drawer.html");
 
