--- a/sidebar.html
+++ b/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar_menu">
+<div class="sidebar_menu open">
   <!-- Sidebar top section -->
   <a href="./index.html" class="logo" id="logo">
     <img src="./images/logo.png" alt="Logo" />
