--- a/transaction.html
+++ b/transaction.html
@@ -13,10 +13,10 @@
 
   <body>
     <div class="d-flex align-items-start">
-      <div class="sidebar_menu">
+      <div class="sidebar_menu open">
         <!-- Sidebar top section -->
-        <a href="./index.html" class="logo" id="logo">
-          <img src="./images/logo.png" alt="Logo" />
+        <a href="./index.html" class="logo_big" id="logo">
+          <img src="./images/logo-big.jpeg" alt="Logo" />
         </a>
 
         <!-- Sidebar grid content -->
@@ -59,7 +59,7 @@
             </li>
 
             <li class="menu_item">
-              <a href="./transaction.html">
+              <a href="./transaction.html" class="active">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g opacity="0.4">
                     <path d="M3.58008 5.16016H17.4201C19.0801 5.16016 20.4201 6.50016 20.4201 8.16016V11.4802" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
@@ -136,8 +136,9 @@
                           <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="notify_avtar" />
                           <span class="notify">Salma sent you new message Assign her new tasks</span>
                           <button class="remove_notify">
-                            <svg focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
-                              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                           </button>
                         </li>
@@ -309,7 +310,7 @@
 
                   <div class="col-12">
                     <div class="tableResponsive">
-                      <table class="table">
+                      <table class="table" id="myTable">
                         <thead>
                           <tr>
                             <th>Ticket / USDT</th>
@@ -376,6 +377,7 @@
                         </tbody>
                       </table>
                     </div>
+                    <ul class="pagination" id="pagination"></ul>
                   </div>
                 </div>
               </div>
@@ -402,6 +404,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+    <script src="./js/app.js"></script>
 
     <script>
       $("#appendRightsidebar").load("./drawer.html");
