--- a/wallet.html
+++ b/wallet.html
@@ -13,10 +13,10 @@
 
   <body>
     <div class="d-flex align-items-start">
-      <div class="sidebar_menu">
+      <div class="sidebar_menu open">
         <!-- Sidebar top section -->
-        <a href="./index.html" class="logo" id="logo">
-          <img src="./images/logo.png" alt="Logo" />
+        <a href="./index.html" class="logo_big" id="logo">
+          <img src="./images/logo-big.jpeg" alt="Logo" />
         </a>
 
         <!-- Sidebar grid content -->
@@ -37,7 +37,7 @@
             </li>
 
             <li class="menu_item">
-              <a href="./wallet.html">
+              <a href="./wallet.html" class="active">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M18.04 13.55C17.62 13.96 17.38 14.55 17.44 15.18C17.53 16.26 18.52 17.05 19.6 17.05H21.5V18.24C21.5 20.31 19.81 22 17.74 22H6.26C4.19 22 2.5 20.31 2.5 18.24V11.51C2.5 9.44001 4.19 7.75 6.26 7.75H17.74C19.81 7.75 21.5 9.44001 21.5 11.51V12.95H19.48C18.92 12.95 18.41 13.17 18.04 13.55Z" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
                   <path opacity="0.4" d="M2.5 12.4098V7.83986C2.5 6.64986 3.23 5.58982 4.34 5.16982L12.28 2.16982C13.52 1.69982 14.85 2.61985 14.85 3.94985V7.74983" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
@@ -136,8 +136,9 @@
                           <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="notify_avtar" />
                           <span class="notify">Salma sent you new message Assign her new tasks</span>
                           <button class="remove_notify">
-                            <svg focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
-                              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                           </button>
                         </li>
@@ -319,7 +320,7 @@
             <div class="col-lg-6">
               <div class="assets_title">Assets</div>
               <div class="tableResponsive">
-                <table class="table">
+                <table class="table" id="myTable">
                   <thead>
                     <tr>
                       <th>Asset</th>
@@ -332,6 +333,8 @@
                   <tbody id="appendData"></tbody>
                 </table>
               </div>
+              <ul class="pagination" id="pagination"></ul>
+
             </div>
 
             <div class="col-lg-6">
@@ -546,6 +549,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+    <script src="./js/app.js"></script>
 
     <script>
       $("#appendRightsidebar").load("./drawer.html");
