--- a/earninner.html
+++ b/earninner.html
@@ -207,7 +207,7 @@
         </div>
         <div class="p-3">
 
-          <div class="balanceCard_box">
+          <!-- <div class="balanceCard_box">
             <div class="row">
               <div class="col-6">
                 <div class="page_title">
@@ -230,10 +230,9 @@
                     </svg>
                   </button>
                 </div>
-                <!-- Your Menu content here -->
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="row mt-4">
             <div class="col-12 col-lg-6 mb-4 mb-lg-0">
