--- a/wallet.html
+++ b/wallet.html
@@ -209,29 +209,70 @@
 
           <div class="balanceCard_box">
             <div class="row">
-              <div class="col-6">
-                <div class="page_title">
-                  <span>Account Value</span>
-                  <button class="page_icon">
-                    <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                      <path fill="currentColor" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
-                    </svg>
-                  </button>
+              <div class="col-4">
+                <div class="card_box">
+                  <svg id="visual" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" preserveAspectRatio="none">
+                    <rect x="0" y="0" width="900" height="600" fill="#668CD7"></rect>
+                    <path d="M0 400L30 386.5C60 373 120 346 180 334.8C240 323.7 300 328.3 360 345.2C420 362 480 391 540 392C600 393 660 366 720 355.2C780 344.3 840 349.7 870 352.3L900 355L900 601L870 601C840 601 780 601 720 601C660 601 600 601 540 601C480 601 420 601 360 601C300 601 240 601 180 601C120 601 60 601 30 601L0 601Z" fill="#4B4C9C" stroke-linecap="round" stroke-linejoin="miter"></path>
+                  </svg>
+                  <div class="page_title">
+                    <span>Total balance</span>
+                    <button class="page_icon">
+                      <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <h4 class="amount">$1200.00</h4>
+                  <p class="amount_small">$1200.00</p>
                 </div>
-                <h4 class="amount">$1200.00</h4>
+              </div>
+              <div class="col-4">
+                <div class="card_simple">
+                  <div class="page_title">
+                    <span class="dark">Total Earning</span>
+                  </div>
+                  <h4 class="amount dark">$1200.00</h4>
+                  <p class="amount_small dark">$1200.00</p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="card_simple">
+                  <div class="page_title">
+                    <span class="dark">Archive Earnings</span>
+
+                    <div class="d-flex align-items-center">
+                      <select name="" class="input_filed me-3" id="">
+                        <option value="1 Day">1 Days</option>
+                        <option value="7 Day">7 Days</option>
+                        <option value="10 Day">10 Days</option>
+                        <option value="Week">Week</option>
+                        <option value="Lifetime">Lifetime</option>
+                      </select>
+
+                      <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M6 12H18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M12 18V6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
+                  <h4 class="amount dark">$1200.00</h4>
+                  <p class="amount_small dark">$1200.00</p>
+                </div>
               </div>
 
-              <div class="col-6">
-                <div class="d-flex align-items-center justify-content-end">
-                  <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M6 12H18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                      <path d="M12 18V6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </button>
-                </div>
-                <!-- Your Menu content here -->
-              </div>
+              <!-- <div class="col-4">
+                        <div class="d-flex align-items-center justify-content-end">
+                          <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M6 12H18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                              <path d="M12 18V6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                          </button>
+                        </div>
+                      </div> -->
             </div>
           </div>
 
@@ -579,25 +620,35 @@
                     <p class='symbol_fiat'>$0.00</p>
                 </Box>
             </td>
+           
             <td>
-                <Box class='table_actions'>
-                    <button class='actions_btn' data-bs-toggle="modal" data-bs-target="#earnModal">
+                <div class="dropdown table_menu">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512">
+                      <path d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z" />
+                    </svg>
+                  </a>
+
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">
                         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="200.000000pt" height="200.000000pt" viewBox="0 0 200.000000 200.000000" preserveAspectRatio="xMidYMid meet">
-                            <g transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-                            <path d="M1220 1779 c-155 -24 -293 -91 -335 -164 -24 -41 -25 -46 -25 -252 l0 -210 -67 14 c-38 7 -126 13 -198 14 -248 1 -428 -60 -502 -170 -21 -31 -23 -45 -23 -181 0 -81 3 -209 7 -285 l6 -139 35 -38 c40 -44 127 -88 227 -114 99-26 400 -27 495 -1 98 26 204 82 243 127 l34 40 74 -16 c100 -21 319 -20 423 1 153 32 267 94 295 162 8 21 11 165 9 530 l-3 501 -31 39 c-39 49 -147 104 -250 127 -93 22 -318 29 -414 15z m377 -65 c115 -24 180 -51 229 -98 52 -50 55 -73 15 -119 -41 -46 -128 -86 -240 -109 -119 -25 -346 -21 -451 7 -134 36 -223 98 -223 155 0 71 139 150 308 173 80 11 291 6 362 -9z m-525 -354 c239 -84 596 -55 759 60 l29 21 0 -79 c0 -69 -3 -82 -24 -105 -32 -35 -109 -72 -203 -99 -107 -31 -380 -33 -488 -4 -96 25 -169 61 -200 97 -22 27 -25 39 -25 109 l0 79 48 -29 c26 -17 73 -39 104 -50z m28 -251 c101 -31 203 -42 340 -35 168 8 310 48 398 112 l22 16 0 -80 c0 -72 -3 -84 -25 -111 -36 -42 -122 -80 -234 -103 -80 -17 -121 -19 -246 -15 -82 3 -171 11 -197 17 -44 11 -48 14 -48 42 0 59 -55 118 -152 164 -33 15 -38 22 -38 50 l0 33 58 -35 c31 -19 86 -44 122 -55z m-287 -5 c102 -23 195 -69 224 -113 29 -42 29 -50 0 -92 -55 -82 -232 -134 -452 -133 -200 1 -344 41 -422 117 -77 74 -8 160 169 212 132 38 334 42 481 9z m1029 -313 c-78 -106 -458 -161 -684 -100 l-38 10 0 81 0 81 33 -7 c249 -53 534 -21 663 73 l39 28 3 -71 c2 -56 -1 -75 -16 -95z m-1548 -40 c94 -31 176 -42 306 -42 180 0 318 30 414 91 l46 30 0 -79 c0 -44 -3 -86 -6 -95 -11 -28 -98 -74 -189 -101 -128 -38 -320 -45 -457 -17 -115 24 -210 64 -243 104 -22 26 -25 39 -25 109 l0 79 46 -30 c26 -16 74 -38 108 -49z m1566 -81 c0 -35 -7 -74 -15 -90 -47 -90 -331 -158 -552 -132 -54 6 -115 16 -135 22 l-38 11 0 81 0 80 28 -7 c113 -28 325 -34 444 -11 89 17 175 49 220 81 18 13 36 24 41 24 4 1 7 -26 7 -59z m-1620 -144 c98 -45 181 -59 350 -60 183 -1 279 17 395 73 l75 37 0 -72 c0 -85 -13 -106 -88 -147 -93 -50 -190 -69 -357 -70 -171 -1 -269 16 -372 64 -86 41 -103 68 -103 165 l0 77 23 -21 c12 -11 47 -32 77 -46z" /> </g>
+                          <g transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+                            <path d="M1220 1779 c-155 -24 -293 -91 -335 -164 -24 -41 -25 -46 -25 -252 l0 -210 -67 14 c-38 7 -126 13 -198 14 -248 1 -428 -60 -502 -170 -21 -31 -23 -45 -23 -181 0 -81 3 -209 7 -285 l6 -139 35 -38 c40 -44 127 -88 227 -114 99-26 400 -27 495 -1 98 26 204 82 243 127 l34 40 74 -16 c100 -21 319 -20 423 1 153 32 267 94 295 162 8 21 11 165 9 530 l-3 501 -31 39 c-39 49 -147 104 -250 127 -93 22 -318 29 -414 15z m377 -65 c115 -24 180 -51 229 -98 52 -50 55 -73 15 -119 -41 -46 -128 -86 -240 -109 -119 -25 -346 -21 -451 7 -134 36 -223 98 -223 155 0 71 139 150 308 173 80 11 291 6 362 -9z m-525 -354 c239 -84 596 -55 759 60 l29 21 0 -79 c0 -69 -3 -82 -24 -105 -32 -35 -109 -72 -203 -99 -107 -31 -380 -33 -488 -4 -96 25 -169 61 -200 97 -22 27 -25 39 -25 109 l0 79 48 -29 c26 -17 73 -39 104 -50z m28 -251 c101 -31 203 -42 340 -35 168 8 310 48 398 112 l22 16 0 -80 c0 -72 -3 -84 -25 -111 -36 -42 -122 -80 -234 -103 -80 -17 -121 -19 -246 -15 -82 3 -171 11 -197 17 -44 11 -48 14 -48 42 0 59 -55 118 -152 164 -33 15 -38 22 -38 50 l0 33 58 -35 c31 -19 86 -44 122 -55z m-287 -5 c102 -23 195 -69 224 -113 29 -42 29 -50 0 -92 -55 -82 -232 -134 -452 -133 -200 1 -344 41 -422 117 -77 74 -8 160 169 212 132 38 334 42 481 9z m1029 -313 c-78 -106 -458 -161 -684 -100 l-38 10 0 81 0 81 33 -7 c249 -53 534 -21 663 73 l39 28 3 -71 c2 -56 -1 -75 -16 -95z m-1548 -40 c94 -31 176 -42 306 -42 180 0 318 30 414 91 l46 30 0 -79 c0 -44 -3 -86 -6 -95 -11 -28 -98 -74 -189 -101 -128 -38 -320 -45 -457 -17 -115 24 -210 64 -243 104 -22 26 -25 39 -25 109 l0 79 46 -30 c26 -16 74 -38 108 -49z m1566 -81 c0 -35 -7 -74 -15 -90 -47 -90 -331 -158 -552 -132 -54 6 -115 16 -135 22 l-38 11 0 81 0 80 28 -7 c113 -28 325 -34 444 -11 89 17 175 49 220 81 18 13 36 24 41 24 4 1 7 -26 7 -59z m-1620 -144 c98 -45 181 -59 350 -60 183 -1 279 17 395 73 l75 37 0 -72 c0 -85 -13 -106 -88 -147 -93 -50 -190 -69 -357 -70 -171 -1 -269 16 -372 64 -86 41 -103 68 -103 165 l0 77 23 -21 c12 -11 47 -32 77 -46z" />
+                          </g>
                         </svg>
-                    </button>
-                    <button class='actions_btn' data-bs-toggle="modal" data-bs-target="#redeemModal">
+                        Earm</a></li>
+                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">
                         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="512.000000pt" height="513.000000pt" viewBox="0 0 512.000000 513.000000" preserveAspectRatio="xMidYMid meet">
-                            <g transform="translate(0.000000,513.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+                          <g transform="translate(0.000000,513.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
                             <path d="M2880 5125 c-8 -2 -49 -9 -90 -15 -258 -42 -514 -201 -681 -423 -77 -102 -152 -256 -186 -382 -24 -90 -27 -117 -27 -275 0 -158 3 -185 27 -275 82 -307 295 -569 577 -712 84 -43 224 -88 322 -103 112 -18 331 -8 438 20 192 51 346 137 492 278 147 141 252 320 305 517 24 90 27 117 27 275 0 157 -3 185 -27 272 -109 408 -431 716 -841 804 -65 14 -301 28 -336 19z m335 -225 c383 -99 653 -433 672 -830 31 -652 -616 -1115 -1229 -879 -273 106 -489 362 -549 654 -102 493 222 976 718 1070 105 20 282 13 388 -15z" />
                             <path d="M2918 4713 c-37 -23 -48 -53 -48 -132 0 -67 -1 -69 -31 -81 -17 -7 -52 -34 -78 -60 -147 -142 -108 -387 76 -479 23 -11 73 -25 110 -31 57 -7 73 -14 96 -40 30 -34 34 -67 12 -110 -36 -70 -128 -67 -195 5 -57 61 -124 69 -171 19 -34 -36 -32 -89 5 -137 29 -38 138 -117 161 -117 9 0 14 -24 16 -86 4 -79 6 -87 32 -110 19 -16 40 -24 67 -24 27 0 48 8 67 24 26 22 28 31 31 109 4 79 6 86 26 91 13 3 44 24 70 47 194 171 104 482 -151 521 -85 13 -111 25 -129 60 -23 44 -17 77 20 114 49 49 101 43 179 -22 71 -59 182 6 162 96 -8 35 -69 93 -130 122 l-45 22 0 69 c0 76 -17 118 -57 136 -33 15 -63 13 -95 -6z" />
                             <path d="M4609 2982 c-78 -26 -129 -64 -244 -184 -55 -56 -196 -201 -313 -321 l-213 -219 -45 42 c-58 54 -138 90 -222 101 -37 4 -314 8 -616 9 l-549 0 -93 30 c-141 45 -250 61 -414 61 -282 0 -509 -65 -728 -207 -112 -73 -263 -224 -335 -335 l-56 -86 -70 -5 c-119 -9 -138 -23 -433 -318 l-268 -267 0 -47 0 -48 576 -582 c317 -319 586 -586 598 -593 28 -16 61 -16 94 1 15 8 147 135 293 283 304 306 304 307 298 451 l-4 77 76 70 c121 113 58 105 879 105 433 0 738 4 789 10 168 22 339 95 468 202 74 61 990 1160 1019 1223 21 43 24 66 24 165 0 106 -2 120 -28 175 -39 81 -107 149 -190 188 -86 40 -205 48 -293 19z m215 -205 c65 -37 99 -88 104 -155 3 -38 -1 -70 -11 -94 -19 -45 -862 -1058 -952 -1144 -73 -70 -166 -122 -275 -155 -74 -23 -81 -23 -855 -29 -540 -4 -790 -9 -812 -17 -69 -24 -153 -77 -220 -138 l-70 -64 -391 392 -392 392 48 75 c192 298 510 461 900 461 153 0 249 -15 368 -58 l79 -28 615 -5 c613 -5 615 -5 657 -27 144 -77 144 -279 0 -356 -41 -22 -49 -22 -500 -27 l-459 -5 -24 -28 c-34 -40 -32 -88 5 -129 l29 -33 417 -3 c446 -3 524 2 609 41 139 64 247 239 235 381 -3 33 13 52 334 383 199 204 355 357 379 371 55 30 129 30 182 -1z m-3602 -1564 l448 -448 0 -45 0 -45 -214 -212 c-118 -117 -218 -213 -223 -213 -4 0 -229 221 -498 490 l-490 490 222 222 222 221 42 -6 c41 -5 64 -27 491 -454z" />
                             <path d="M2239 1805 c-53 -29 -61 -105 -17 -152 43 -46 125 -37 153 18 49 95 -43 185 -136 134z" />
-                            </g>
+                          </g>
                         </svg>
-                    </button>
-                </Box>
+                        Redeem</a></li>
+                  </ul>
+                </div>
             </td>
         </tr>`;
 
