Add Dummy data in table

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
+                          <img src='./images/avax.svg' class='symol' />
                           <span class='symbol_name'>Avax</span>
                         </Box>
                       </td>
@@ -494,7 +494,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -503,8 +503,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/bnb.svg' class='symol' />
+                          <span class='symbol_name'>Bnb</span>
                         </Box>
                       </td>
                       <td>
@@ -535,7 +535,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -544,8 +544,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/usdc.svg' class='symol' />
+                          <span class='symbol_name'>USDC</span>
                         </Box>
                       </td>
                       <td>
@@ -576,7 +576,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -585,8 +585,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/usdt.svg' class='symol' />
+                          <span class='symbol_name'>USDT</span>
                         </Box>
                       </td>
                       <td>
@@ -617,7 +617,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -626,8 +626,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/btc.svg' class='symol' />
+                          <span class='symbol_name'>BTC</span>
                         </Box>
                       </td>
                       <td>
@@ -658,7 +658,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -667,8 +667,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/dai.svg' class='symol' />
+                          <span class='symbol_name'>DAI</span>
                         </Box>
                       </td>
                       <td>
@@ -699,7 +699,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -708,8 +708,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/eth.svg' class='symol' />
+                          <span class='symbol_name'>ETH</span>
                         </Box>
                       </td>
                       <td>
@@ -740,7 +740,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -749,8 +749,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/tusd.svg' class='symol' />
+                          <span class='symbol_name'>TUSD</span>
                         </Box>
                       </td>
                       <td>
@@ -781,7 +781,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -790,7 +790,7 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
+                          <img src='./images/avax.svg' class='symol' />
                           <span class='symbol_name'>Avax</span>
                         </Box>
                       </td>
@@ -822,7 +822,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -831,8 +831,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/bnb.svg' class='symol' />
+                          <span class='symbol_name'>Bnb</span>
                         </Box>
                       </td>
                       <td>
@@ -863,7 +863,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -872,8 +872,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/usdc.svg' class='symol' />
+                          <span class='symbol_name'>USDC</span>
                         </Box>
                       </td>
                       <td>
@@ -904,7 +904,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -913,8 +913,8 @@
                     <tr>
                       <td>
                         <Box class='assets'>
-                          <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
-                          <span class='symbol_name'>Avax</span>
+                          <img src='./images/usdt.svg' class='symol' />
+                          <span class='symbol_name'>USDT</span>
                         </Box>
                       </td>
                       <td>
@@ -945,7 +945,7 @@
 
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                           </ul>
                         </div>
@@ -993,7 +993,7 @@
                                     <path d="M1220 1779 c-155 -24 -293 -91 -335 -164 -24 -41 -25 -46 -25 -252 l0 -210 -67 14 c-38 7 -126 13 -198 14 -248 1 -428 -60 -502 -170 -21 -31 -23 -45 -23 -181 0 -81 3 -209 7 -285 l6 -139 35 -38 c40 -44 127 -88 227 -114 99-26 400 -27 495 -1 98 26 204 82 243 127 l34 40 74 -16 c100 -21 319 -20 423 1 153 32 267 94 295 162 8 21 11 165 9 530 l-3 501 -31 39 c-39 49 -147 104 -250 127 -93 22 -318 29 -414 15z m377 -65 c115 -24 180 -51 229 -98 52 -50 55 -73 15 -119 -41 -46 -128 -86 -240 -109 -119 -25 -346 -21 -451 7 -134 36 -223 98 -223 155 0 71 139 150 308 173 80 11 291 6 362 -9z m-525 -354 c239 -84 596 -55 759 60 l29 21 0 -79 c0 -69 -3 -82 -24 -105 -32 -35 -109 -72 -203 -99 -107 -31 -380 -33 -488 -4 -96 25 -169 61 -200 97 -22 27 -25 39 -25 109 l0 79 48 -29 c26 -17 73 -39 104 -50z m28 -251 c101 -31 203 -42 340 -35 168 8 310 48 398 112 l22 16 0 -80 c0 -72 -3 -84 -25 -111 -36 -42 -122 -80 -234 -103 -80 -17 -121 -19 -246 -15 -82 3 -171 11 -197 17 -44 11 -48 14 -48 42 0 59 -55 118 -152 164 -33 15 -38 22 -38 50 l0 33 58 -35 c31 -19 86 -44 122 -55z m-287 -5 c102 -23 195 -69 224 -113 29 -42 29 -50 0 -92 -55 -82 -232 -134 -452 -133 -200 1 -344 41 -422 117 -77 74 -8 160 169 212 132 38 334 42 481 9z m1029 -313 c-78 -106 -458 -161 -684 -100 l-38 10 0 81 0 81 33 -7 c249 -53 534 -21 663 73 l39 28 3 -71 c2 -56 -1 -75 -16 -95z m-1548 -40 c94 -31 176 -42 306 -42 180 0 318 30 414 91 l46 30 0 -79 c0 -44 -3 -86 -6 -95 -11 -28 -98 -74 -189 -101 -128 -38 -320 -45 -457 -17 -115 24 -210 64 -243 104 -22 26 -25 39 -25 109 l0 79 46 -30 c26 -16 74 -38 108 -49z m1566 -81 c0 -35 -7 -74 -15 -90 -47 -90 -331 -158 -552 -132 -54 6 -115 16 -135 22 l-38 11 0 81 0 80 28 -7 c113 -28 325 -34 444 -11 89 17 175 49 220 81 18 13 36 24 41 24 4 1 7 -26 7 -59z m-1620 -144 c98 -45 181 -59 350 -60 183 -1 279 17 395 73 l75 37 0 -72 c0 -85 -13 -106 -88 -147 -93 -50 -190 -69 -357 -70 -171 -1 -269 16 -372 64 -86 41 -103 68 -103 165 l0 77 23 -21 c12 -11 47 -32 77 -46z" />
                                   </g>
                                 </svg>
-                                Earm</a></li>
+                                Earn</a></li>
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">
                                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="512.000000pt" height="513.000000pt" viewBox="0 0 512.000000 513.000000" preserveAspectRatio="xMidYMid meet">
                                   <g transform="translate(0.000000,513.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
@@ -1248,7 +1248,7 @@
 
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                   </ul>
                 </div>
