fix pagination in mobile view

--- a/earninner.html
+++ b/earninner.html
@@ -401,7 +401,7 @@
                     <span>09/10/2023</span>
                   </li>
                   <li>
-                    <p>Total earning :</p>
+                    <p>Total Invested :</p>
                     <span>800.00 * 0.03 USDT</span>
                   </li>
                   <li>
