--- a/profile.html
+++ b/profile.html
@@ -266,10 +266,9 @@
 
                     <div class="d-flex align-items-center">
                       <select name="" class="input_filed me-3 transparent" id="">
-                        <option value="1 Day">1 Days</option>
+                        <option value="Today">Today</option>
                         <option value="7 Day">7 Days</option>
-                        <option value="10 Day">10 Days</option>
-                        <option value="Week">Week</option>
+                        <option value="10 Day">30 Days</option>
                         <option value="Lifetime">Lifetime</option>
                       </select>
 
