--- a/drawer.html
+++ b/drawer.html
@@ -30,6 +30,7 @@
           </button>
         </li>
       </ul>
+
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active w-100" id="home-tab-pane">
           <div style="margin-top: 2px">
@@ -521,7 +522,7 @@
     <div id="sendMail" class="d-none"></div>
 
     <!-- ========= Other Link ======== -->
-    <div class="other_link mt-4">
+    <div class="other_link mt-4 d-none">
       <p class="sub_title py-3">SUPPORT</p>
       <ul class="crypto_deposit">
         <li>
@@ -591,6 +592,83 @@
           </a>
         </li>
       </ul>
+    </div>
+
+
+
+    <!-- Active balance -->
+    <div class="modal fade" id="activeBalance" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal_header">
+            <h5>Active Balance</h5>
+            <button class="modal_close" data-bs-dismiss="modal">
+              <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"></path>
+              </svg>
+            </button>
+          </div>
+          <div class="modal_body">
+            <div style="margin: 0 0.5rem; margin-top: 1px">
+              <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
+            </div>
+
+            <label for="symbol1" class="symbol_list">
+              <div class="drawer_select_item">
+                <div class="select_symbol">
+                  <img src="./images/avax.svg" class="symbol" />
+                  <div class="symbol_name">
+                    <p>Avax</p>
+                    <span>USDT</span>
+                  </div>
+                </div>
+
+                <div class="symbol_price">
+                  <input class="form-check-input" checked type="radio" name="symbols" id="symbol1">
+                </div>
+              </div>
+            </label>
+            <label for="symbol2" class="symbol_list">
+              <div class="drawer_select_item">
+                <div class="select_symbol">
+                  <img src="./images/bnb.svg" class="symbol" />
+                  <div class="symbol_name">
+                    <p>BNB</p>
+                    <span>USDT</span>
+                  </div>
+                </div>
+
+                <div class="symbol_price">
+                  <input class="form-check-input" type="radio" name="symbols" id="symbol2">
+                </div>
+              </div>
+            </label>
+            <label for="symbol3" class="symbol_list">
+              <div class="drawer_select_item">
+                <div class="select_symbol">
+                  <img src="./images/btc.svg" class="symbol" />
+                  <div class="symbol_name">
+                    <p>BTC</p>
+                    <span>USDT</span>
+                  </div>
+                </div>
+
+                <div class="symbol_price">
+                  <input class="form-check-input" type="radio" name="symbols" id="symbol3">
+                </div>
+              </div>
+            </label>
+          </div>
+          <div class="modal_footer d-flex align-content-center justify-content-end">
+            <button class="boost_btn oulined_primary w-50" data-bs-dismiss="modal">
+              Cancel
+            </button>
+            <button class="boost_btn primary w-50" data-bs-dismiss="modal">
+              Confirm
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script> -->
