--- a/wallet.html
+++ b/wallet.html
@@ -267,10 +267,9 @@
 
                     <div class="d-flex align-items-center">
                       <select name="" class="input_filed me-3 transparent" id="">
-                        <option value="1 Day">1 Days</option>
+                        <option value="Today">Today</option>
                         <option value="7 Day">7 Days</option>
-                        <option value="10 Day">10 Days</option>
-                        <option value="Week">Week</option>
+                        <option value="10 Day">30 Days</option>
                         <option value="Lifetime">Lifetime</option>
                       </select>
 
@@ -356,88 +355,6 @@
         <div id="appendRightsidebar"></div>
       </div>
     </div>
-
-    <!-- Active balance -->
-    <div class="modal fade" id="activeBalance" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal_header">
-            <h5>Active Balance</h5>
-            <button class="modal_close" onclick="handleClose()">
-              <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"></path>
-              </svg>
-            </button>
-          </div>
-          <div class="modal_body">
-            <div style="margin: 0 0.5rem; margin-top: 1px">
-              <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
-            </div>
-
-            <div class="tabs">
-              <div class="tab_buttons nav nav-tabs" id="myTab" role="tablist">
-                <div class="nav-item" role="presentation">
-                  <button class="nav-link active" id="crypto-tab" data-bs-toggle="tab" data-bs-target="#crypto-tab-pane" type="button" role="tab" aria-selected="true">
-                    Crypto
-                  </button>
-                </div>
-                <div class="nav-item" role="presentation">
-                  <button class="nav-link" id="fiat-tab" data-bs-toggle="tab" data-bs-target="#fiat-tab-pane" type="button" role="tab" aria-selected="true">
-                    Fiat
-                  </button>
-                </div>
-              </div>
-              <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="crypto-tab-pane" role="tabpanel" aria-labelledby="crypto-tab" tabindex="0">
-                  <div class="symbol_list">
-                    <div class="drawer_select_item">
-                      <div class="select_symbol">
-                        <img src="./images/avax.svg" class="symbol" />
-                        <div class="symbol_name">
-                          <p>Avax</p>
-                          <span>USDT</span>
-                        </div>
-                      </div>
-
-                      <div class="symbol_price">
-                        <p>12,119.95 USDT</p>
-                        <span>$12,113.24</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane fade" id="fiat-tab-pane" role="tabpanel" aria-labelledby="fiat-tab" tabindex="-1">
-                  <div class="symbol_list">
-                    <div class="drawer_select_item">
-                      <div class="select_symbol">
-                        <img src="./images/avax.svg" class="symbol" />
-                        <div class="symbol_name">
-                          <p>Brazillian Real</p>
-                          <span>BRL</span>
-                        </div>
-                      </div>
-
-                      <div class="symbol_price">
-                        <p>0.00 BRL</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal_footer d-flex align-content-center justify-content-end">
-            <button class="boost_btn oulined_primary w-50" data-bs-dismiss="modal">
-              Cancel
-            </button>
-            <button class="boost_btn primary w-50" data-bs-dismiss="modal">
-              Confirm
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
 
     <!-- Reeem modal -->
     <div class="modal fade" id="redeemModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -533,74 +450,90 @@
             <h5>EARN BTC</h5>
             <button class="modal_close" onclick="handleClose()">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
             </button>
           </div>
 
           <div class="modal_body">
-            <div class="earn_toggle">
-              <!-- Toggle for earn Type -->
-              <button value="left">
-                <p>Smart Earn</p>
-                <div class="earn_per">
-                  <div class="earn_icon">30</div>
-                  <span>Earn 7%</span>
-                </div>
-              </button>
-            </div>
+            <div id="beforeConform">
 
-            <!-- Notice for Earn -->
-            <div class="notice">
-              <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M15.32 3H8.68c-.26 0-.52.11-.7.29L3.29 7.98c-.18.18-.29.44-.29.7v6.63c0 .27.11.52.29.71l4.68 4.68c.19.19.45.3.71.3h6.63c.27 0 .52-.11.71-.29l4.68-4.68c.19-.19.29-.44.29-.71V8.68c0-.27-.11-.52-.29-.71l-4.68-4.68c-.18-.18-.44-.29-.7-.29zM12 17.3c-.72 0-1.3-.58-1.3-1.3s.58-1.3 1.3-1.3 1.3.58 1.3 1.3-.58 1.3-1.3 1.3zm0-4.3c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1z"></path>
-              </svg>
-              Invest your BTC for 30 days and earn 7%
-            </div>
+              <div class="conform_icon">
+                <?xml version="1.0" standalone="no"?>
+                <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN" "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="256.000000pt" height="256.000000pt" viewBox="0 0 256.000000 256.000000" preserveAspectRatio="xMidYMid meet">
 
-            <!-- Earn Amount box -->
-            <div class="earn_amountBox">
-              <label class="label">Amount</label>
-              <div class="earn_amount">
-                <div class="symbol_amount">
-                  <img src="https://app.yield.app/assets/btc-symbol-f7e767b3.svg" alt="BTC" />
-                  <div class="symbol_name">
-                    <p>BTC</p>
-                    <span>Bitcoin</span>
+                  <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+                    <path d="M1116 2549 c-483 -67 -895 -404 -1046 -857 -50 -152 -64 -242 -64 -412 0 -171 14 -260 65 -415 121 -362 433 -673 797 -795 152 -50 242 -64 412 -64 274 0 482 62 710 212 277 183 475 480 547 822 24 117 24 363 0 480 -57 271 -178 492 -371 678 -182 175 -391 286 -641 337 -96 20 -314 28 -409 14z m365 -125 c246 -46 448 -152 619 -324 222 -221 340 -506 340 -820 0 -314 -118 -599 -340 -820 -221 -222 -506 -340 -820 -340 -314 0 -599 118 -820 340 -222 221 -340 506 -340 820 0 314 118 599 340 820 220 221 499 338 811 339 77 1 160 -5 210 -15z" />
+                    <path d="M1340 1905 c-82 -37 -114 -105 -85 -182 46 -119 220 -134 292 -24 80 120 -69 267 -207 206z" />
+                    <path d="M1103 1460 c-89 -30 -93 -32 -102 -67 -6 -20 -9 -38 -7 -40 2 -2 15 1 30 7 40 15 108 12 134 -6 36 -25 30 -97 -25 -281 -39 -132 -47 -172 -47 -245 -1 -86 -1 -87 33 -122 50 -52 105 -70 193 -64 96 7 224 52 232 81 11 43 9 44 -66 39 -139 -8 -148 30 -71 297 74 262 66 358 -34 407 -65 31 -163 29 -270 -6z" />
+                  </g>
+                </svg>
+              </div>
+
+              <h5 class="conform_small">Are you sure</h5>
+              <h6 class="conform_text">You are earn !</h6>
+
+            </div>
+            <div id="afterConform" class="d-none">
+              <div class="earn_toggle">
+                <button value="left">
+                  <p>Smart Earn</p>
+                  <div class="earn_per">
+                    <div class="earn_icon">30</div>
+                    <span>Earn 7%</span>
                   </div>
-                </div>
-                <input type="number" placeholder="0.000000" />
+                </button>
               </div>
-            </div>
 
-            <!-- Earn Amount percentage -->
-            <div class="percantage_box">
-              <div class="percentage">
-                <button class="per_btn">25%</button>
-                <button class="per_btn">50%</button>
-                <button class="per_btn">75%</button>
-                <button class="per_btn">100%</button>
-              </div>
-              <h4>Available : 0 BTC</h4>
-            </div>
-
-            <!-- Deposit box -->
-            <div class="get_start">
-              <div class="note">
+              <div class="notice">
                 <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
                   <path fill="currentColor" d="M15.32 3H8.68c-.26 0-.52.11-.7.29L3.29 7.98c-.18.18-.29.44-.29.7v6.63c0 .27.11.52.29.71l4.68 4.68c.19.19.45.3.71.3h6.63c.27 0 .52-.11.71-.29l4.68-4.68c.19-.19.29-.44.29-.71V8.68c0-.27-.11-.52-.29-.71l-4.68-4.68c-.18-.18-.44-.29-.7-.29zM12 17.3c-.72 0-1.3-.58-1.3-1.3s.58-1.3 1.3-1.3 1.3.58 1.3 1.3-.58 1.3-1.3 1.3zm0-4.3c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1z"></path>
                 </svg>
-                Deposit Bitcoin to begin earning!
+                Invest your BTC for 30 days and earn 7%
               </div>
-              <button class="boost_btn oulined_primary sm">Get Started</button>
+
+              <div class="earn_amountBox">
+                <label class="label">Amount</label>
+                <div class="earn_amount">
+                  <div class="symbol_amount">
+                    <img src="https://app.yield.app/assets/btc-symbol-f7e767b3.svg" alt="BTC" />
+                    <div class="symbol_name">
+                      <p>BTC</p>
+                      <span>Bitcoin</span>
+                    </div>
+                  </div>
+                  <input type="number" placeholder="0.000000" />
+                </div>
+              </div>
+
+              <!-- Earn Amount percentage -->
+              <div class="percantage_box">
+                <div class="percentage">
+                  <button class="per_btn">25%</button>
+                  <button class="per_btn">50%</button>
+                  <button class="per_btn">75%</button>
+                  <button class="per_btn">100%</button>
+                </div>
+                <h4>Available : 0 BTC</h4>
+              </div>
+
+              <!-- Deposit box -->
+              <div class="get_start">
+                <div class="note">
+                  <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M15.32 3H8.68c-.26 0-.52.11-.7.29L3.29 7.98c-.18.18-.29.44-.29.7v6.63c0 .27.11.52.29.71l4.68 4.68c.19.19.45.3.71.3h6.63c.27 0 .52-.11.71-.29l4.68-4.68c.19-.19.29-.44.29-.71V8.68c0-.27-.11-.52-.29-.71l-4.68-4.68c-.18-.18-.44-.29-.7-.29zM12 17.3c-.72 0-1.3-.58-1.3-1.3s.58-1.3 1.3-1.3 1.3.58 1.3 1.3-.58 1.3-1.3 1.3zm0-4.3c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1z"></path>
+                  </svg>
+                  Deposit Bitcoin to begin earning!
+                </div>
+                <button class="boost_btn oulined_primary sm">Get Started</button>
+              </div>
             </div>
           </div>
 
           <div class="modal_footer">
-            <button onclick="handleClose()" class="boost_btn primary" style="width: 100%">
-              Confirm
-            </button>
+            <button id="handleConform" class="boost_btn primary w-100">Next</button>
             <a href="#" class="link">Terms & Conditions</a>
             <span>You will begin earning rewards within the next 48 hours</span>
           </div>
@@ -651,7 +584,7 @@
                   </a>
 
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
+                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Exchange</a></li>
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                   </ul>
