--- a/earn.html
+++ b/earn.html
@@ -262,7 +262,7 @@
                 </div>
               </div>
               <div class="col-lg-4 mb-4 mb-lg-0">
-                <div class="card_simple danger">
+                <div class="card_simple green">
                   <div class="page_title">
                     <span class="dark">Active Earnings</span>
 
