--- a/wallet.html
+++ b/wallet.html
@@ -261,7 +261,7 @@
                 </div>
               </div>
               <div class="col-lg-4 mb-4 mb-lg-0">
-                <div class="card_simple danger">
+                <div class="card_simple green">
                   <div class="page_title">
                     <span class="dark">Active Earnings</span>
 
@@ -364,78 +364,83 @@
             <h5>REDEEM BTC</h5>
             <button class="modal_close" onclick="handleClose()">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
             </button>
           </div>
 
           <div class="modal_body">
-            <div class="earn_toggle">
-              <!-- Toggle for earn Type -->
-              <button value="left">
-                <p>Smart Earn</p>
-                <div class="earn_per">
-                  <div class="earn_icon">30</div>
-                  <span>Earn 7%</span>
-                </div>
-              </button>
+            <div id="beforeRedeem">
+              <h5 class="conform_small">Are you sure</h5>
+              <h6 class="conform_text">Do you want to procced</h6>
             </div>
 
-            <!-- Notice for Earn -->
-            <div style="margin: 0 0.5rem; margin-top: 1">
-              <div class="grid-container" style="
-                      display: grid;
-                      grid-template-columns: repeat(2, 1fr);
-                      gap: 2px;
-                    ">
-                <div class="grid-item mt-3">
-                  <p class="f-primary fw-600 mb-0" style="font-size: 14px">
-                    0 BTC
-                  </p>
-                  <span class="f-secondary fw-500" style="font-size: 12px">Available for redeem</span>
-                </div>
-                <div class="grid-item">
-                  <p class="f-primary fw-600 mb-0" style="font-size: 14px">
-                    Total Days
-                  </p>
-                  <span class="f-secondary fw-500" style="font-size: 12px">30</span>
-                </div>
+            <div id="afterRedeem" class="d-none">
+              <div class="earn_toggle">
+                <!-- Toggle for earn Type -->
+                <button value="left">
+                  <p>Smart Earn</p>
+                  <div class="earn_per">
+                    <div class="earn_icon">30</div>
+                    <span>Earn 7%</span>
+                  </div>
+                </button>
               </div>
-            </div>
 
-            <!-- Earn Amount box -->
-            <div class="earn_amountBox">
-              <label class="label">Amount</label>
-              <div class="earn_amount">
-                <div class="symbol_amount">
-                  <img src="https://app.yield.app/assets/btc-symbol-f7e767b3.svg" alt="BTC" />
-                  <div class="symbol_name">
-                    <p>BTC</p>
-                    <span>Bitcoin</span>
+              <!-- Notice for Earn -->
+              <div style="margin: 0 0.5rem; margin-top: 1">
+                <div class="grid-container" style="
+                                      display: grid;
+                                      grid-template-columns: repeat(2, 1fr);
+                                      gap: 2px;
+                                    ">
+                  <div class="grid-item mt-3">
+                    <p class="f-primary fw-600 mb-0" style="font-size: 14px">
+                      0 BTC
+                    </p>
+                    <span class="f-secondary fw-500" style="font-size: 12px">Available for redeem</span>
+                  </div>
+                  <div class="grid-item">
+                    <p class="f-primary fw-600 mb-0" style="font-size: 14px">
+                      Total Days
+                    </p>
+                    <span class="f-secondary fw-500" style="font-size: 12px">30</span>
                   </div>
                 </div>
-                <input type="number" placeholder="0.000000" />
               </div>
-            </div>
 
-            <!-- Earn Amount percentage -->
-            <div class="percantage_box">
-              <div class="percentage">
-                <button class="per_btn">25%</button>
-                <button class="per_btn">50%</button>
-                <button class="per_btn">75%</button>
-                <button class="per_btn">100%</button>
+              <!-- Earn Amount box -->
+              <div class="earn_amountBox">
+                <label class="label">Amount</label>
+                <div class="earn_amount">
+                  <div class="symbol_amount">
+                    <img src="https://app.yield.app/assets/btc-symbol-f7e767b3.svg" alt="BTC" />
+                    <div class="symbol_name">
+                      <p>BTC</p>
+                      <span>Bitcoin</span>
+                    </div>
+                  </div>
+                  <input type="number" placeholder="0.000000" />
+                </div>
               </div>
-              <h4>Available : 0 BTC</h4>
+
+              <!-- Earn Amount percentage -->
+              <div class="percantage_box">
+                <div class="percentage">
+                  <button class="per_btn">25%</button>
+                  <button class="per_btn">50%</button>
+                  <button class="per_btn">75%</button>
+                  <button class="per_btn">100%</button>
+                </div>
+                <h4>Available : 0 BTC</h4>
+              </div>
             </div>
           </div>
 
           <div class="modal_footer">
-            <button onclick="handleClose()" class="boost_btn primary" style="width: 100%">
-              Confirm
-            </button>
-            <a href="#" class="link">Terms & Conditions</a>
+            <button id="handleRedeem" class="boost_btn primary w-100">procced</button>
+            <!-- <a href="#" class="link">Terms & Conditions</a> -->
             <span>You will begin earning rewards within the next 48 hours</span>
           </div>
         </div>
@@ -458,24 +463,10 @@
 
           <div class="modal_body">
             <div id="beforeConform">
-
-              <div class="conform_icon">
-                <?xml version="1.0" standalone="no"?>
-                <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN" "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="256.000000pt" height="256.000000pt" viewBox="0 0 256.000000 256.000000" preserveAspectRatio="xMidYMid meet">
-
-                  <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-                    <path d="M1116 2549 c-483 -67 -895 -404 -1046 -857 -50 -152 -64 -242 -64 -412 0 -171 14 -260 65 -415 121 -362 433 -673 797 -795 152 -50 242 -64 412 -64 274 0 482 62 710 212 277 183 475 480 547 822 24 117 24 363 0 480 -57 271 -178 492 -371 678 -182 175 -391 286 -641 337 -96 20 -314 28 -409 14z m365 -125 c246 -46 448 -152 619 -324 222 -221 340 -506 340 -820 0 -314 -118 -599 -340 -820 -221 -222 -506 -340 -820 -340 -314 0 -599 118 -820 340 -222 221 -340 506 -340 820 0 314 118 599 340 820 220 221 499 338 811 339 77 1 160 -5 210 -15z" />
-                    <path d="M1340 1905 c-82 -37 -114 -105 -85 -182 46 -119 220 -134 292 -24 80 120 -69 267 -207 206z" />
-                    <path d="M1103 1460 c-89 -30 -93 -32 -102 -67 -6 -20 -9 -38 -7 -40 2 -2 15 1 30 7 40 15 108 12 134 -6 36 -25 30 -97 -25 -281 -39 -132 -47 -172 -47 -245 -1 -86 -1 -87 33 -122 50 -52 105 -70 193 -64 96 7 224 52 232 81 11 43 9 44 -66 39 -139 -8 -148 30 -71 297 74 262 66 358 -34 407 -65 31 -163 29 -270 -6z" />
-                  </g>
-                </svg>
-              </div>
-
               <h5 class="conform_small">Are you sure</h5>
-              <h6 class="conform_text">You are earn !</h6>
-
+              <h6 class="conform_text">Do you want to procced</h6>
             </div>
+
             <div id="afterConform" class="d-none">
               <div class="earn_toggle">
                 <button value="left">
@@ -533,8 +524,8 @@
           </div>
 
           <div class="modal_footer">
-            <button id="handleConform" class="boost_btn primary w-100">Next</button>
-            <a href="#" class="link">Terms & Conditions</a>
+            <button id="handleConform" class="boost_btn primary w-100">procced</button>
+            <!-- <a href="#" class="link">Terms & Conditions</a> -->
             <span>You will begin earning rewards within the next 48 hours</span>
           </div>
         </div>
